Completed base CSS and HTML
moving onto js now to add listeners to buttons etc

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="container">
         <div class="question">What will you choose? Rock, Paper or Scissors?</div> 
         <div class="buttons">
-            <button class="button" id="rock"></button>
-            <button class="button" id="paper"></button>
-            <button class="button" id="scissors"></button>
+            <button class="button" id="rock">rock</button>
+            <button class="button" id="paper">paper</button>
+            <button class="button" id="scissors">scissors</button>
         </div>
         <div class="result">You Won! Computer chose Scissors.</div>
     </div>
@@ -34,6 +34,9 @@
             <div class="score" id="player">0</div>
             <div class="player">Player</div>
         </div>
+    </div>
+    <div class="footer">
+        <div class="disclaimer">Website created by Nerb</div>
     </div>
 </body>
 </html>
