Adding DOM functionality!

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
         <div class="scorecard">
             <div class="score" id="computer">0</div>
             <div class="player">Computer</div>
+            <div id="computerChoice">Computer Chose:</div>
         </div>
         <div class="scorecard">
             <div class="score" id="player">0</div>
             <div class="player">Player</div>
+            <div id="playerChoice">Player Chose:</div>
         </div>
     </div>
     <div class="footer">
