--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="button" id="paper">paper</button>
             <button class="button" id="scissors">scissors</button>
         </div>
-        <div class="result">You Won! Computer chose Scissors.</div>
+        <div class="result"></div>
     </div>
     <div class="scorecontainer">
         <div class="scorecard">
@@ -36,6 +36,9 @@
             <div class="player">Player</div>
             <div id="playerChoice">Player Chose:</div>
         </div>
+    </div>
+    <div class="resetbutton">
+        <button class="reset">reset game</button>
     </div>
     <div class="footer">
         <div class="disclaimer">Website created by Nerb</div>
